--- a/index.html
+++ b/index.html
@@ -48,5 +48,26 @@
             </div>
         </nav>
         <!-- Navbar End -->
+
+        <!-- Header Start -->
+        <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
+        	<div class="container">
+        		<div class="row align-items-center">
+        			<div class="col-lg-7 text-center text-lg-left">
+        				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
+        				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
+        				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
+        				<div class="typed-text d-none">Software Developer, Engineer, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
+        				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
+        					<a href="" class="btn btn-white mr-4">Download CV</a>
+        					<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
+        				</div>
+        			</div>
+        			<div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
+        				<img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.png" alt="Profile Picture">
+        			</div>
+        		</div>
+        	</div>
+        </div>   
 	</body>
 </html>
