--- a/index.html
+++ b/index.html
@@ -59,15 +59,119 @@
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
         				<div class="typed-text d-none">Software Developer, Engineer, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
         				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
-        					<a href="" class="btn btn-white mr-4">Download CV</a>
+        					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" class="btn btn-white mr-4">Download CV</a>
         					<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
         				</div>
         			</div>
         			<div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
-        				<img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.png" alt="Profile Picture">
+        				<img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="Profile Picture">
         			</div>
         		</div>
         	</div>
-        </div>   
+        </div>
+        <!-- Header End -->
+
+
+        <!-- About Start -->
+        <div class="container-fluid py-5" id="about">
+        	<div class="container">
+        		<div class="position-relative d-flex align-items-center justify-content-center">
+        			<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">About</h1>
+        			<h1 class="position-absolute text-uppercase text-primary">About Me</h1>
+        		</div>
+        		<div class="row align-items-center">
+        			<div class="col-lg-5 pb-4 pb-lg-0">
+        				<img class="img-fluid rounded w-100" src="img/about.jpg" alt="Ishraq">
+        			</div>
+        			<div class="col-lg-7">
+        				<h3 class="mb-4">Software Developer</h3>
+        				<p>Interested to work in the computer software industry alongside interested to work in Artificial Intelligence (AI) sector as well . Skilled in, OOP (Object Oriented Programming), JAVA, Python, Data Analysis, Data Visualization, Microsoft Office, Event Management, IT Strategy, and Problem Solving . Currently pursuing my undergrad degree with a Bachelor of Science - (B.Sc.) focused in Computer Science and Engineering (CSE) from BRAC University.</p>
+        				<div class="row mb-3">
+        					<div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Ishraq Ahmed Esha</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">July 04, 1999</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachelor</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">4 Years</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">(+88) 01534741641</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">ishraqahmedbd@gmail.com</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 35/1/B, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
+        				</div>
+        				<a href="" class="btn blue btn-outline-primary mr-4">Hire Me</a>
+        				<a href="" class="btn btn-outline-primary">Learn More</a>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- About End -->
+
+        <!-- Skill Start -->
+        <div class="container-fluid py-5" id="skill">
+        	<div class="container">
+        		<div class="position-relative d-flex align-items-center justify-content-center">
+        			<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
+        			<h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
+        		</div>
+        		<div class="row align-items-center">
+        			<div class="col-md-6">
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">JAVA</h6>
+        						<h6 class="font-weight-bold">85%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" area-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Python</h6>
+        						<h6 class="font-weight-bold">65%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">HTML</h6>
+        						<h6 class="font-weight-bold">80%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="col-md-6">
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">MS Office</h6>
+        						<h6 class="font-weight-bold">90%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Data Analysis</h6>
+        						<h6 class="font-weight-bold">75%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        				<div class="skill mb-4">
+        					<div class="d-flex justify-content-between">
+        						<h6 class="font-weight-bold">Problem Solving</h6>
+        						<h6 class="font-weight-bold">80%</h6>
+        					</div>
+        					<div class="progress">
+        						<div class="progress-bar bg-warning" role="progressbar" aria-caluenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        					</div>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+        </div>
+        <!-- Skill End -->
 	</body>
 </html>
