--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         		</div>
         		<div class="row align-items-center">
         			<div class="col-lg-5 pb-4 pb-lg-0">
-        				<img class="img-fluid rounded w-100" src="img/about.jpg" alt="Ishraq">
+        				<img class="img-fluid rounded w-100" src="img/about.png" alt="Ishraq">
         			</div>
         			<div class="col-lg-7">
         				<h3 class="mb-4">Software Developer</h3>
@@ -173,5 +173,37 @@
         	</div>
         </div>
         <!-- Skill End -->
+
+        <!-- Qualification Start -->
+        <div class="container-fluid py-5" id="qualification">
+        	<div class="container">
+        		<div class="position-relative d-flex align-items-center justify-content-center">
+        			<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
+        			<h1 class="position-absolute text-uppercase text-primary">Education & Experience</h1>
+        		</div>
+        		<div class="row align-items-center">
+        			<div class="col-lg-6">
+        				<h3 class="mb-4">My Education</h3>
+        				<div class="border-left border-primary pt-2 pl-4 ml-2">
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Bachelor of Scinece</h5>
+        						<p class="mb-2"><strong>BRAC University</strong> | <small>2019 - Current</small></p>
+        						<p>Pursuing my undergraduation degree in Computer Science and Engineering at BRAC University</p>
+        					</div>
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Higher Secondery</h5>
+        						<p class="mb-2"><strong>Dhaka Residential Model College</strong> | <small>2016 - 2018</small></p>
+        						<p>Major subject was Physics, Chemisry, Higher Math, General Math, Biology</p>
+        					</div>
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Secondary</h5>
+        						<p class="mb-2"><strong>Dhanmondi Govt. Boys' High School</strong> | <small>2006 - 2016</small></p>
+        						<p>Major subject was Physics, Chemistry, Higher Math, General Math, Biology</p>
+        					</div>
+        				</div>
+        			</div>
 	</body>
 </html>
