qualification & experience raw

--- a/index.html
+++ b/index.html
@@ -205,5 +205,31 @@
         					</div>
         				</div>
         			</div>
+        			<div class="col-lg-6">
+        				<h3 class="mb-4">My Experience</h3>
+        				<div class="border-left border-primary pt-2 pl-4 ml-2">
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Software and Control Developer, AI Contributer</h5>
+        						<p class="mb-2"><strong>BRACU Mongol - Tori</strong> | <small>2019 - Current</small> | <small>Excellent</small></p>
+        						<p>Developed software and control alongside contribute in Artificial Intilligence</p>
+        					</div>
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">IT Consultant</h5>
+        						<p class="mb-2"><strong>Private Tax Firm</strong> | <small>2019 - Current </small> | <small>Excellent</small></p>
+        						<p>Consult all the IT facilites and data entry work alongside communication network perform for the client</p>
+        					</div>
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Managing Director</h5>
+        						<p class="mb-2"><strong>Ahmed Group of Companies</strong> | <small>2018 - Current</small> | <small>Excellent</small></p>
+        						<p>IT Advisor alongside manage the employe facilities and deal with the all kind of important issues </p>
+        					</div>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+        	<!-- Qualification End -->
 	</body>
 </html>
