--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html leng="en">
 	<head>
 		<meta charset="utf-8">
-		<title> Ishraq Ahmed Esha - Portfolio Website</title>
+		<title> Ishraq Ahmed Esha - Portfolio</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<meta content="Porfolio Website" name="keywords">
 		<meta content="Portfolio Website" name="description">
@@ -59,7 +59,7 @@
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
         				<div class="typed-text d-none">Software Developer, Engineer, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
         				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
-        					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" class="btn btn-white mr-4">Download CV</a>
+        					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
         					<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
         				</div>
         			</div>
@@ -231,5 +231,7 @@
         		</div>
         	</div>
         	<!-- Qualification End -->
+
+
 	</body>
 </html>
