service raw half

--- a/index.html
+++ b/index.html
@@ -233,5 +233,38 @@
         	<!-- Qualification End -->
 
 
+        	<!-- Service Start -->
+        	<div class="container-fluid pt-5" id="service">
+        		<div class="container">
+        			<div class="service-h4 position-relative d-flex align-items-center justify-content-center">
+        				<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Service</h1>
+        				<h1 class="position-absolute text-uppercase text-primary">My Service</h1>
+        			</div>
+        			<div class="row pb-3">
+        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        					<div class="d-flex align-items-center justify-content-center mb-4">
+        						<i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
+        						<h4 class="font-weight-bold m-0">Software Development</h4>
+        					</div>
+        					<p>Management Software focused with database and user friendly graphical user interface (GUI)</p>
+        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        				</div>
+        				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
+        					<div class="d-flex align-items-center justify-content-center mb-4">
+        						<i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
+        						<h4 class="font-weight-bold m-0">Data Entry</h4>
+        					</div>
+        					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
+        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        				</div>
+        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        					<div class="d-flex align-items-center justify-content-center mb-4">
+        						<i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
+        						<h4 class="font-weight-bold m-0">Web Development</h4>
+        					</div>
+        					<p>Website andWeb app developer with backend management and user friendy simple UI/UX design cool </p>
+        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        				</div>
+
 	</body>
 </html>
