--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
         				<div class="typed-text d-none">Software Developer, Engineer, Ethical Hacker, Back End Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert</div>
         				<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
+        					<!-- <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i> -->
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
         					<a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
         				</div>
@@ -251,7 +252,7 @@
         				</div>
         				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
         					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
+        						<i class="fa fa-2x fa-chart-line service-icon bg-primary text-white mr-3"></i>
         						<h4 class="font-weight-bold m-0">Data Entry</h4>
         					</div>
         					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
@@ -259,10 +260,18 @@
         				</div>
         				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
         					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
+        						<i class="fa fa-2x fa-code service-icon bg-primary text-white mr-3"></i>
         						<h4 class="font-weight-bold m-0">Web Development</h4>
         					</div>
         					<p>Website andWeb app developer with backend management and user friendy simple UI/UX design cool </p>
+        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        				</div>
+        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        					<div class="d-flex align-items-center justify-content-center mb-4">
+        						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
+        						<h4 class="font-weight-bold m-0">Copy Writer</h4>
+        					</div>
+        					<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
         					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         				</div>
 
