service raw end

--- a/index.html
+++ b/index.html
@@ -276,12 +276,19 @@
         				</div>
         				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
         					<div class="d-flex align-items-center justify-content-center mb-4">
+        						<i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
+        						<h4 class="font-weight-bold m-0">Robotics Project</h4>
+        					</div>
+        					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
+        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        				</div>
+        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        					<div class="d-flex align-items-center justify-content-center mb-4">
         						<i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
         						<h4 class="font-weight-bold m-0">Database Management</h4>
         					</div>
         					<p>Database management service for any kind of data and mysql to used for perform this kind of operation</p>
         					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         				</div>
-
 	</body>
 </html>
