update in title image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Ishraq Ahmed Esha - Portfolio</title>
+
+		<!-- Imaage in title bar-->
+		<link rel="shortcut icon" href="img/favicon2.png" type="image/png">
+
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<meta content="Porfolio Website" name="keywords">
 		<meta content="Portfolio Website" name="description">
