--- a/index.html
+++ b/index.html
@@ -235,64 +235,151 @@
         			</div>
         		</div>
         	</div>
-        	<!-- Qualification End -->
+        </div>
+        <!-- Qualification End -->
 
 
-        	<!-- Service Start -->
-        	<div class="container-fluid pt-5" id="service">
-        		<div class="container">
-        			<div class="service-h4 position-relative d-flex align-items-center justify-content-center">
-        				<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Service</h1>
-        				<h1 class="position-absolute text-uppercase text-primary">My Service</h1>
+        <!-- Service Start -->
+       	<div class="container-fluid pt-5" id="service">
+       		<div class="container">
+       			<div class="service-h4 position-relative d-flex align-items-center justify-content-center">
+       				<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Service</h1>
+       				<h1 class="position-absolute text-uppercase text-primary">My Service</h1>
+       			</div>
+       			<div class="row pb-3">
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       					<div class="d-flex align-items-center justify-content-center mb-4">
+       						<i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
+       						<h4 class="font-weight-bold m-0">Software Development</h4>
+       					</div>
+       					<p>Management Software focused with database and user friendly graphical user interface (GUI)</p>
+       					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+       				</div>
+       				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
+        				<div class="d-flex align-items-center justify-content-center mb-4">
+        					<i class="fa fa-2x fa-chart-line service-icon bg-primary text-white mr-3"></i>
+        					<h4 class="font-weight-bold m-0">Data Entry</h4>
+       					</div>
+       					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
+        				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
-        			<div class="row pb-3">
-        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Software Development</h4>
-        					</div>
-        					<p>Management Software focused with database and user friendly graphical user interface (GUI)</p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
-        				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-chart-line service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Data Entry</h4>
-        					</div>
-        					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
-        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-code service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Web Development</h4>
-        					</div>
-        					<p>Website andWeb app developer with backend management and user friendy simple UI/UX design cool </p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
-        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Copy Writer</h4>
-        					</div>
-        					<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
-        				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Robotics Project</h4>
-        					</div>
-        					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
-        				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
-        					<div class="d-flex align-items-center justify-content-center mb-4">
-        						<i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
-        						<h4 class="font-weight-bold m-0">Database Management</h4>
-        					</div>
-        					<p>Database management service for any kind of data and mysql to used for perform this kind of operation</p>
-        					<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
-        				</div>
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       					<div class="d-flex align-items-center justify-content-center mb-4">
+       						<i class="fa fa-2x fa-code service-icon bg-primary text-white mr-3"></i>
+       						<h4 class="font-weight-bold m-0">Web Development</h4>
+       					</div>
+       					<p>Website andWeb app developer with backend management and user friendy simple UI/UX design cool </p>
+        				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        			</div>
+        			<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+        				<div class="d-flex align-items-center justify-content-center mb-4">
+       						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
+       						<h4 class="font-weight-bold m-0">Copy Writer</h4>
+       					</div>
+        				<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
+        				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        			</div>
+       				<div class="service-box col-lg-3 col-md-6 text-center mb-5">
+       					<div class="d-flex align-items-center justify-content-center mb-4">
+       						<i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
+       						<h4 class="font-weight-bold m-0">Robotics Project</h4>
+       					</div>
+       					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
+        				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+        			</div>
+       				<div class="service-box col-lg-4 col-md-6 text-center mb-5">
+       					<div class="d-flex align-items-center justify-content-center mb-4">
+       						<i class="fa fa-2x fa-database service-icon bg-primary text-white mr-3"></i>
+       						<h4 class="font-weight-bold m-0">Database Management</h4>
+       					</div>
+       					<p>Database management service for any kind of data and mysql to used for perform this kind of operation</p>
+        				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+       				</div>
+       			</div>
+       		</div>
+       	</div>
+       	<!-- Services End-->
+
+       	<!-- Portfolio Start -- >
+        <div class="container-fluid pt-5 pb-3" id="portfolio">
+        	<div clsss="container">
+       			<div class="position-relative d-flex align-items-center justify-content-center">
+       				<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gallery</h1>
+       				<h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
+       			</div>
+       			<div class="row">
+       				<div class="col-12 text-center mb-2">
+     					<ul class="list-inline mb-4" id="portfolio-flters">
+       						<li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
+       						<li 	class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
+       						<li class="" s="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
+       						<li class="btn btn-sm btn-outline-primary m-1" data-filters=".third">Marketing</li>
+       					</ul>
+       				</div>
+       			</div>
+     				<div class="row portfolio-container">
+       					<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+       						<div class="position-relative overflow-hidden mb-2">
+       							<img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+       							<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+       				<div class="col-lg04 col-md-6 mb-4 portfolio-item second">
+       					<div class="position-relative overflow-hidden mb-2">
+       						<img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="">
+       						<div class="porifolio-btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+       				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+       					<div class="position-relative overflow-hidden mb-2">
+       						<img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="">
+       						<div class="portfolio0btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+       				<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+       					<div class="position-relative overflow-hidden mb-2">
+       						<img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="">
+       						<div class="portfolio0btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+       				<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+       					<div class="position-relative overflow-hidden mb-2">
+       						<img class="img-fluid rounded w-100" src="img/portfolio-5.jpg" alt="">
+       						<div class="portfolio0btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-5.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+       				<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+       					<div class="position-relative overflow-hidden mb-2">
+       						<img class="img-fluid rounded w-100" src="img/portfolio-6.jpg" alt="">
+       						<div class="portfolio0btn bg-primary d-flex align-items-center justify-content-center">
+       							<a href="img/portfolio-6.jpg" data-lightbox="portfolio">
+       								<i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+       							</a>
+       						</div>
+       					</div>
+       				</div>
+      			</div>
+       		</div>
+       	</div>
 	</body>
 </html>
