--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         						<h6 class="font-weight-bold">85%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" area-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -132,7 +132,7 @@
         						<h6 class="font-weight-bold">65%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -141,7 +141,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
@@ -152,7 +152,7 @@
         						<h6 class="font-weight-bold">90%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -161,7 +161,7 @@
         						<h6 class="font-weight-bold">75%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-secondary" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         				<div class="skill mb-4">
@@ -170,7 +170,7 @@
         						<h6 class="font-weight-bold">80%</h6>
         					</div>
         					<div class="progress">
-        						<div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        						<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
         					</div>
         				</div>
         			</div>
