--- a/index.html
+++ b/index.html
@@ -402,11 +402,25 @@
        							<h5 class="font-weight-bold m-0">Bruce Mckanzie</h5>
        							<span>Busisnessman</span>
        						</div>
-
-
-
-
-
+       						<div class="text-center">
+       							<i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+       							<h4 class="font-weight-light mb-4">Awesome time maintainer and work very fluently with perfect dedication and deliver his work in time. The most powerful tool is punctuality and honest as well as dedication.</h4>
+       							<img class="img-fluid wounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px";>
+       							<h5 class="font-weight-bold m-0">David Swapson</h5>
+       							<span>Lawyer</span>
+       						</div>
+       						<div class="text-center">
+       							<i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+       							<h4 class="font-weight-light mb-4">Awesome time maintainer and work very fluently with perfect dedication and deliver his work in time. The most powerful tool is punctuality and honest as well as dedication.</h4>
+       							<img class="img-fluid wounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px";>
+       							<h5 class="font-weight-bold m-0">Mark Wade</h5>
+       							<span>Service Holder</span>
+       						</div>
+       					</div>
+       				</div>
+       			</div>
+       		</div>
+       	</div>
 
 
        	<!-- Scroll to Bottom -->
