--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!-- Imaage in title bar-->
 		<link rel="shortcut icon" href="img/favicon2.png" type="image/png">
 
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 		<meta content="Porfolio Website" name="keywords">
 		<meta content="Portfolio Website" name="description">
 		
